Website update, main page and chatGPT story create page

--- a/examples/templates/index.html
+++ b/examples/templates/index.html
@@ -31,7 +31,9 @@
             align-items: center;
             background-color: rgba(255, 255, 255, 0.5);
             flex-direction: column;
-            margin-bottom: 10vh;
+            margin-bottom: 5vh;
+            width: 100%;
+            padding: 2vh 0;
         }
 
         .canvas {
@@ -179,7 +181,7 @@
     <h1 class="title">Animated Tale</h1>
     <div class="canvas-container">
         <div class="button-container">
-            <button class="btn-common btn-create" onclick="location.href='/upload';">Create</button>
+            <button class="btn-common btn-create" onclick="location.href='/story';">Create</button>
             <button class="btn-common btn-template" onclick="location.href='/template';">Template</button>
 
         </div>
