--- a/examples/templates/mask.html
+++ b/examples/templates/mask.html
@@ -19,7 +19,7 @@
             justify-content: center;
             height: 100vh;
         }
-    
+
         .title {
             text-align: center;
             font-size: 5vw;
@@ -36,7 +36,7 @@
             align-items: center;
             background-color: rgba(255, 255, 255, 0.5);
             flex-direction: column;
-            margin-bottom: 5vh; 
+            margin-bottom: 5vh;
             width: 100%;
             padding: 2vh 0;
         }
@@ -64,7 +64,7 @@
             text-align: center;
             border-radius: 1.5vw;
         }
-    
+
         img {
             height: 90%;
             position: absolute;
@@ -72,77 +72,6 @@
             left: 50%;
             transform: translate(-50%, -50%);
         }
-
-        /*----------------------------------------*/
-        form {
-            position: absolute;
-            bottom: 3vh;
-            right: 20vw;
-            background-color: transparent;
-            border: none;
-            box-shadow: none;
-            display: flex;
-            flex-direction: row;
-            gap: 1vw;
-        }
-        form input[type="file"], form input[type="submit"] {
-            font-size: 1.1vw;
-            padding: 1.1vh 1.5vw;
-            margin-bottom: 1vh;
-            border: 0.08vw solid #ccc;
-            border-radius: 0.4vw;
-            cursor: pointer;
-            width: auto;
-        }
-        .btn-common {
-            font-size: 1.1vw;
-            padding: 1.1vh 1.5vw;
-            border: 0.08vw solid #ccc;
-            border-radius: 0.4vw;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        .btn-upload {
-            background-color: #333;
-            border-color: #333;
-            color: white;
-            box-shadow: 0 0.3vw 0.6vw rgba(0, 0, 0, 0.1);
-            width: auto;
-        }
-        .btn-upload:hover {
-            background-color: #969696;
-        }
-        .btn-submit {
-            background-color: #87CEFA;
-            border-color: #87CEFA;
-            color: white;
-            box-shadow: 0 0.3vw 0.6vw rgba(0, 0, 0, 0.1);
-            width: auto;
-        }
-        .btn-submit:hover {
-            background-color: #B0E0E6;
-        }
-        .upload-btn-wrapper {
-            position: relative;
-            overflow: hidden;
-            display: inline-block;
-        }
-        .upload-btn-wrapper .btn-common {
-            position: relative;
-            z-index: 1;
-        }
-        .upload-btn-wrapper input[type=file] {
-            font-size: 1.1vw;
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;  /* Ensure it covers the entire button */
-            height: 100%; /* Ensure it covers the entire button */
-            cursor: pointer; /* Make sure the cursor is a pointer over the invisible input */
-            z-index: 2;
-            opacity: 0;  
-        }
-
 
         .btn-prev {
             position: absolute;
@@ -162,13 +91,31 @@
         .btn-prev:hover {
             background-color: #B0E0E6;
         }
-
-
-        /* ------------- decos----------------------*/
+        .btn-next {
+            position: absolute;
+            right: 12vw;
+            bottom: 1vw;
+            font-family: 'Comic Sans MS', 'Chalkboard SE', 'Arial', sans-serif;
+            font-size: 1vw;
+            text-decoration: none;
+            margin-top: 2vh;
+            padding: 1vh 2vw;
+            border: 0.08vw solid #ccc;
+            border-radius: 0.4vw;
+            cursor: pointer;
+            background-color: #87CEFA;
+            color: white;
+            transition: background-color 0.3s;
+        }
+        .btn-next:hover {
+            background-color: #B0E0E6;
+        }
+        
+        /* -----------------------Doodles-------------------------------*/
         .balloon {
             position: absolute;
             bottom: 10vh;
-            animation: float 3s infinite, drift 2s infinite;
+            animation: float 4s infinite, drift 2s infinite;
             opacity: 0.8;
             z-index: -1;
         }
@@ -182,14 +129,14 @@
         }
         .doodle.circle {
             border: 2px solid #FF5733;
-            animation: doodleAnimation 5s infinite alternate;
+            animation: doodleAnimation 7s infinite alternate;
         }
         @keyframes doodleAnimation {
             0% {
-                transform: scale(1);
+                transform: scale(0.8);
             }
             100% {
-                transform: scale(1.1);
+                transform: scale(1.3);
             }
         }
         .doodle.line {
@@ -197,14 +144,14 @@
             height: 5px;
             background-color: #33FF57;
             transform: rotate(45deg);
-            animation: doodleAnimation2 4s infinite alternate;
+            animation: doodleAnimation2 5s infinite alternate;
         }
         @keyframes doodleAnimation2 {
             0% {
-                transform: rotate(45deg);
+                transform: rotate(78deg);
             }
             100% {
-                transform: rotate(40deg);
+                transform: rotate(45deg);
             }
         }
         .doodle.dot {
@@ -225,7 +172,7 @@
                 transform: rotate(0deg);
             }
             100% {
-                transform: rotate(5deg);
+                transform: rotate(30deg);
             }
         }
         .doodle.squiggle {
@@ -244,46 +191,28 @@
             }
         }
 
-        /* ------------- Process----------------------*/
-        #processingMessage {
-            position: absolute;
-            bottom: 3vw;
-            left: 20vw;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 5px;
-            border-radius: 5px;
-            font-size: 1vw;
-            display: flex;
-            align-items: center;
-            gap: 1vw;
-            z-index: 10;
-        }
         .loader {
-            border: 0.3vw solid #f3f3f3;
-            border-top: 0.3vw solid #3498db; 
+            border: 16px solid #f3f3f3;
+            border-top: 16px solid #3498db;
             border-radius: 50%;
-            width: 2vw;
-            height: 2vw;
+            width: 50px;
+            height: 50px;
             animation: spin 2s linear infinite;
-            margin: 1vw auto;
         }
+
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
-        .submitted-popup {
-            display: none; /* Initially hidden */
-            position: fixed;
-            bottom: 10%; /* Position it 10% from the bottom of the page */
+
+        #Mask {
+            max-height: 100%;
+            display: block;
+            margin: auto;
+            position: absolute;
+            top: 50%;
             left: 50%;
-            transform: translateX(-50%);
-            background-color: rgba(128, 128, 128, 0.5); /* Transparent gray background */
-            padding: 20px;
-            border-radius: 10px;
-            color: white;
-            font-weight: bold;
-            text-align: center;
-            width: auto; /* Adjust width as needed */
+            transform: translate(-50%, -50%);
         }
 
     </style>
@@ -291,28 +220,13 @@
 </head>
 <body>
     <h1 class="title">Animated Tale</h1>
-    <div id="processingMessage" style="display: none; text-align: center;">
-        <div class="loader"></div>
-        Processing...
-    </div>
     <div class="canvas-container">
         <div class="canvas">
-            <img id="uploadedImage" src="" alt="Uploaded Image" style="display: none;">
-
+            <img id="Mask" src="/get_image/web_test/mask.png" alt="Mask">
         </div>
-        <a href="/story" class="btn-prev">Prev</a>
-        <form action="/process_upload" enctype="multipart/form-data" method="post">
-            <div class="upload-btn-wrapper">
-                <button class="btn-common btn-upload">Upload</button>
-                <input type="file" name="file" />
-            </div>
-            <input type="submit" class="btn-common btn-submit" value="Submit">
-        </form>
+        <a href="/texture" class="btn-prev">Prev</a>
+        <a href="/joint_overlay" class="btn-next">Next</a>
     </div>
-    <div id="submittedMessage" class="submitted-popup">
-        Submitted
-    </div>
-    
 
     <svg class="balloon" style="left: 5%; width: 60px; animation-delay: 1s;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2a7 7 0 0 1 7 7c0 3.08-3.46 7.5-7 11.5C8.46 16.5 5 12.08 5 9a7 7 0 0 1 7-7z"/><path d="M12 22s-1.5 1.5-3 0"/></svg>
     <svg class="balloon" style="right: 10%; width: 80px; animation-delay: 3s;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2a7 7 0 0 1 7 7c0 3.08-3.46 7.5-7 11.5C8.46 16.5 5 12.08 5 9a7 7 0 0 1 7-7z"/><path d="M12 22s-1.5 1.5-3 0"/></svg>
@@ -320,7 +234,7 @@
     <svg class="balloon" style="right: 15%; width: 50px; animation-delay: 4s;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2a7 7 0 0 1 7 7c0 3.08-3.46 7.5-7 11.5C8.46 16.5 5 12.08 5 9a7 7 0 0 1 7-7z"/><path d="M12 22s-1.5 1.5-3 0"/></svg>
     <svg class="balloon" style="left: 10%; width: 80px; animation-delay: 5s;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2a7 7 0 0 1 7 7c0 3.08-3.46 7.5-7 11.5C8.46 16.5 5 12.08 5 9a7 7 0 0 1 7-7z"/><path d="M12 22s-1.5 1.5-3 0"/></svg>
     <svg class="balloon" style="right: 5%; width: 60px; animation-delay: 6s;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2a7 7 0 0 1 7 7c0 3.08-3.46 7.5-7 11.5C8.46 16.5 5 12.08 5 9a7 7 0 0 1 7-7z"/><path d="M12 22s-1.5 1.5-3 0"/></svg>
-    
+
     <div class="doodle circle" style="top: 5%; left: 10%;"></div>
     <div class="doodle line" style="top: 43%; left: 5%;"></div>
     <div class="doodle circle" style="top: 65%; left: 14%;"></div>
@@ -333,38 +247,11 @@
     <div class="doodle zigzag" style="top: 70%; right: 10%;"></div>
     <div class="doodle zigzag" style="top: 6%; right: 27%;"></div>
     <div class="doodle squiggle" style="top: 65%; right: 20%;"></div>
-    
+
     <script>
-        const imgElement = document.getElementById('uploadedImage');
-        document.querySelector('input[type="file"]').addEventListener('change', function (e) {
-            const file = e.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = function (e) {
-                    imgElement.src = e.target.result;
-                    imgElement.style.display = "block"; // Show the uploaded image
-                }
-                reader.readAsDataURL(file);
-            }
-        });
-
-        document.querySelector('input[type="submit"]').addEventListener('click', function() {
-            document.getElementById('processingMessage').style.display = "block";
-        });
-
-        window.onload = function() {
-            const urlParams = new URLSearchParams(window.location.search);
-            if (urlParams.has('from_confirm')) {
-                let message = document.getElementById('submittedMessage');
-                message.style.display = "block";
-                
-                setTimeout(function() {
-                    message.style.display = "none";
-                }, 2000);
-            }
-        }
 
     </script>
+    
 </body>
 
 </html>
