--- a/examples/templates/index.html
+++ b/examples/templates/index.html
@@ -13,6 +13,11 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
         }
     
         .title {
