--- a/examples/templates/index.html
+++ b/examples/templates/index.html
@@ -171,7 +171,7 @@
             }
         }
         #mainGif {
-            max-height: 100%;
+            height: 90%;
             display: block;
             margin: auto;
             position: absolute;
